--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <link rel="icon" href="https://raw.githubusercontent.com/yashverma03/Video-streaming-app/main/public/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="icon" href="https://raw.githubusercontent.com/yashverma03/Video-streaming-app/main/public/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-  <title>Video Streaming App</title>
+  <title>Video Streaming</title>
 </head>
 
 <body>
